--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,57 @@
-body {
+
+$primary-color: #E7772D;
+
+
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+
+.nav-container {
+   width: 100%;
+   height: 56px;
+   padding: 0 100px;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   background-color: antiquewhite;
+   position: sticky;
+   top: 0;
+   z-index: 1;
+  .logo{
+    // width: 10%;
+    // height: 90%;
+    img{
+      width: 100%;
+      height: auto;
+    }
+  }
+  .nav {
+    display: flex;
+    gap: 20px;
+    list-style: none;
+  }
+}
+
+.main-container {
+  width: 100%;
+  margin: 50px 0;
+  height: auto;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap: 4rem;
+  justify-content: center;
+  align-items: center;
+  .items{
+    width: 300px;
+    height: 200px;
+    background-color: $primary-color;
+    display: flex;
+    flex-direction: column;
+    gap: 10px
+  }
+   
 }
