--- a/src/style.scss
+++ b/src/style.scss
@@ -110,14 +110,28 @@ li {
     .pp-body {
       display: flex;
       flex-direction: column;
-
-
+      padding: 1rem 0;
+      
+      .pp-comments-title {
+        align-self: center;
+        padding: 1rem;
+        font-size: 1.5rem;
+      }
     }
 
     .pp-footer {
+      display: flex;
+      flex-direction: column;
+
       .form {
         display: flex;
         flex-direction: column;
+        gap: 1rem;
+
+        .pp-form-title {
+          font-size: 1.5rem;
+          align-self: center;
+        }
       }
     }
   }
