--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,6 @@
 
-$primary-color: #E7772D;
-$border-radius: .6rem;
-
+$primary-color: #e7772d;
+$border-radius: 0.6rem;
 
 * {
   margin: 0;
@@ -14,24 +13,26 @@ li {
 }
 
 .nav-container {
-   width: 100%;
-   height: 56px;
-   padding: 0 100px;
-   display: flex;
-   align-items: center;
-   justify-content: space-between;
-   background-color: antiquewhite;
-   position: sticky;
-   top: 0;
-   z-index: 1;
-  .logo{
+  width: 100%;
+  height: 56px;
+  padding: 0 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: antiquewhite;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+
+  .logo {
     // width: 10%;
     // height: 90%;
-    img{
+    img {
       width: 100%;
       height: auto;
     }
   }
+
   .nav {
     display: flex;
     gap: 20px;
@@ -48,15 +49,15 @@ li {
   grid-gap: 4rem;
   justify-content: center;
   align-items: center;
-  .items{
+
+  .items {
     width: 300px;
     height: 200px;
     background-color: $primary-color;
     display: flex;
     flex-direction: column;
-    gap: 10px
+    gap: 10px;
   }
-   
 }
 
 .popup-section {
@@ -64,23 +65,23 @@ li {
   padding: 1rem;
   width: 100%;
   height: 100%;
-	position: fixed;
-	top: 0;
-	z-index: 9999;
-	left: 0;
-	overflow-y: auto;
-  
+  position: fixed;
+  top: 0;
+  z-index: 9999;
+  left: 0;
+  overflow-y: auto;
+
   .popup {
     display: flex;
-		flex-direction: column;
-		padding: 1.5rem;
-		width: 80%;
-		max-width: 37.5rem;
-		background-color: #E7772D;
-		position: relative;
-		border-radius: 0.6rem;
-		overflow-y: auto;
-		margin: 1rem auto;
+    flex-direction: column;
+    padding: 1.5rem;
+    width: 80%;
+    max-width: 37.5rem;
+    background-color: #e7772d;
+    position: relative;
+    border-radius: 0.6rem;
+    overflow-y: auto;
+    margin: 1rem auto;
     border: 1px solid black;
 
     .pp-header {
@@ -124,7 +125,7 @@ li {
       display: flex;
       flex-direction: column;
       padding: 1rem 0;
-      
+
       .pp-comments-title {
         align-self: center;
         padding: 1rem;
@@ -158,7 +159,7 @@ li {
         }
 
         #pp-comment-btn {
-          padding: .4rem;
+          padding: 0.4rem;
           border-radius: $border-radius;
         }
       }
