--- a/src/style.scss
+++ b/src/style.scss
@@ -1,11 +1,8 @@
 
-  @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
-  @import '~@fortawesome/fontawesome-free/css/all.css';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+@import '~@fortawesome/fontawesome-free/css/all.css';
 
-
- 
-$primary-color: #E7772D;
-
+$primary-color: #e7772d;
 
 * {
   margin: 0;
@@ -22,32 +19,34 @@ header {
 }
 
 .nav-container {
-   width: 100%;
-   height: 56px;
-   padding: 0 100px;
-   display: flex;
-   align-items: center;
-   justify-content: space-between;
-   background-color: antiquewhite;
-  
-  .logo{
+  width: 100%;
+  height: 56px;
+  padding: 0 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: antiquewhite;
+
+  .logo {
     width: 24%;
     height: 90%;
     display: flex;
     align-items: center;
     justify-content: center;
-    img{
+
+    img {
       width: 100%;
       height: auto;
     }
   }
+
   .nav {
     display: flex;
     gap: 20px;
     list-style: none;
     font-size: 16px;
     font-weight: 500;
-    color: #45062E;
+    color: #45062e;
   }
 }
 
@@ -60,46 +59,53 @@ header {
   grid-gap: 4rem;
   justify-content: center;
   align-items: center;
-  .items{
+
+  .items {
     width: 300px;
-    height:  auto;
+    height: auto;
     padding: 10px 10px;
     border: 2px solid rgba(231, 119, 45, 0.9);
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    .item-img-container{
-    background-color: rgba(231, 119, 45, 0.7);
 
+    .item-img-container {
+      background-color: rgba(231, 119, 45, 0.7);
       width: 100%;
-      img{
+
+      img {
         width: 100%;
         height: auto;
       }
     }
-    .detail-container{
+
+    .detail-container {
       display: flex;
       align-items: center;
-      .likes{
-        display: flex; 
+
+      .likes {
+        display: flex;
         padding: 0 10px;
+
         .like-btn {
           border: none;
-          background-color: #ffffff;
+          background-color: #fff;
           font-size: 20px !important;
         }
       }
     }
-    .comment-btn{
+
+    .comment-btn {
       display: flex;
       gap: 9rem;
+
       .comment {
         padding: 6px 12px;
         margin: 0;
-        background-color: #E7772D;
+        background-color: #e7772d;
         border: none;
-        color: #ffffff;
+        color: #fff;
         font-weight: 400;
       }
     }
@@ -114,7 +120,6 @@ header {
 
 @media (min-width: 768px) and (max-width: 991px) {
   .item-container {
-    grid-template-columns: auto auto ;
+    grid-template-columns: auto auto;
   }
 }
-
