--- a/src/style.scss
+++ b/src/style.scss
@@ -122,7 +122,8 @@ li {
 }
 
 .popup-section {
-  background-color: gray;
+  background-color: rgba(128, 128, 128, 0.5);
+  backdrop-filter: blur(5px);
   padding: 1rem;
   width: 100%;
   height: 100%;
@@ -133,12 +134,14 @@ li {
   overflow-y: auto;
 
   .popup {
+    background-color: rgba(255, 255, 255, 0.9); /* Adjust the color and transparency as desired */
+    backdrop-filter: blur(10px); /* Adjust the blur radius as desired */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
     padding: 1.5rem;
     width: 80%;
     max-width: 37.5rem;
-    background-color: #e7772d;
     position: relative;
     border-radius: 0.6rem;
     overflow-y: auto;
