--- a/src/style.scss
+++ b/src/style.scss
@@ -143,8 +143,8 @@ li {
   overflow-y: auto;
 
   .popup {
-    background-color: rgba(255, 255, 255, 0.9); /* Adjust the color and transparency as desired */
-    backdrop-filter: blur(10px); /* Adjust the blur radius as desired */
+    background-color: rgba(255, 255, 255, 0.9);  
+    backdrop-filter: blur(10px);  
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
